# onecode-streamlit

./: README.md  pyproject.toml
.github/workflows/: documentation_builder.yml  documentation_builder.yml.tmp  validation.yml
onecode_st/base/: enums.py
onecode_st/cli/: build.py  start.py
onecode_st/elements/: __init__.py  input_streamlit_element.py  output_streamlit_element.py
onecode_st/elements/input/: checkbox.py  csv_reader.py  dropdown.py  file_input.py  folder_input.py  number_input.py  radio_button.py  slider.py  text_input.py  xlsx_reader.py
onecode_st/elements/output/: csv_output.py  file_output.py  image_output.py  plotly_output.py  text_output.py
onecode_st/utils/: __init__.py  format.py  import_input.py  import_output.py
tests/: conftest.py
tests/data/flow_1/: app.py
tests/data/flow_1/flows/: step1.py  step3.py  unused.py  utils.py
tests/data/invalid_flow/flows/: step1.py
tests/data/invalid_flow/flows/onecode_ext/input_elements/: __init__.py
tests/regression/cli/: test_run_streamlit.py
tests/regression/elements/: test_streamlit_checkbox.py  test_streamlit_csv_output.py  test_streamlit_csv_reader.py  test_streamlit_dropdown.py  test_streamlit_file_input.py  test_streamlit_file_output.py  test_streamlit_folder_input.py  test_streamlit_image_output.py  test_streamlit_input_element.py  test_streamlit_number_input.py  test_streamlit_output_element.py  test_streamlit_plotly_output.py  test_streamlit_radio_button.py  test_streamlit_slider.py  test_streamlit_text_input.py  test_streamlit_text_output.py
tests/unit/cli/: test_start.py
tests/unit/elements/: test_checkbox.py  test_csv_output.py  test_csv_reader.py  test_dropdown.py  test_file_input.py  test_file_output.py  test_folder_input.py  test_image_output.py  test_number_input.py  test_plotly_output.py  test_radio_button.py  test_slider.py  test_text_input.py  test_text_output.py
tests/unit/utils/: test_format.py
