[tool.poetry]
name = "onecode_st"
version = "1.0.0.dev"
description = "Streamlit plugin for OneCode"
readme = "README.md"
authors = ["DeepLime <contact@deeplime.io>"]
license = "MIT"
keywords = ["onecode", "plugin", "streamlit"]
homepage = "https://github.com/deeplime-io/onecode-streamlit"
repository = "https://github.com/deeplime-io/onecode-streamlit"
documentation = "https://deeplime-io.github.io/onecode-streamlit"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Code Generators"
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
onecode = ">=1.0.0"
pydash = "^5.1.0"
python-slugify = "^6.1.2"

# streamlit
streamlit = { version = ">=1.12.0,<1.18", optional = true }
streamlit-image-select = { version = "^0.5.1", optional = true }
streamlit-option-menu = { version = "^0.3.2", optional = true }
streamlit_tree_select = { version = "^0.0.5", optional = true }
altair = { version = "<5", optional = true }

# tests
datatest = { version = "^0.11.1", optional = true }
pytest = { version = "^6.0.2", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }
pytest-xdist = { version = "^3.1.0", optional = true }

[tool.poetry.extras]
test = [
    "datatest",
    "pytest",
    "pytest-cov",
    "pytest-xdist"
]

[tool.poetry.scripts]
onecode-streamlit = 'onecode_st.cli.start:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
